feat: complete work for implement_public_catalog_module